[package]
name = "seax_util"
version = "0.1.2"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "General-purpose tools for compilers targeting the Seax platform."
license = "MIT OR Apache-2.0"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax_util"
readme = "README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
log = "0.3.1"
byteorder = "*"

[dev-dependencies]
quickcheck = "*"

[features]
unstable = []
